examples/test/testpolicy7946.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7946
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key9: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value30
          key24: value14
          key28: value25
      podSelector:
        matchLabels:
          key43: value36
          key47: value35
          key4: value8
